--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 header {
   padding: 0px 0;
 }
@@ -18,6 +17,11 @@ header h1 {
 header nav {
   display: flex;  
   justify-content: flex-end;
+}
+
+header img{
+  height: 10px;
+  width: 10px:
 }
 
 header p {
