--- a/main.css
+++ b/main.css
@@ -1,6 +1,23 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  padding-right: 175px;
+  align-items: center;
+ }
+
+body .col-sm-12{
+  font-weight:2000;
+  style="text-align:center"
+}
+body .col-sm-12 img{
+ align-items: center;
+}
+
 header {
   padding: 0px 0;
 }
+
+header .row,
 
 footer .row {
   display: flex;
@@ -17,13 +34,62 @@ header nav {
   justify-content: flex-end;
 }
 
-header img{
-  height: 35px;
-  width: 35px:
-    padding: 0px 20px;
+header p {
+  padding: 0px 20px;  
+  margin: 0;
 }
 
-header p {
-  padding: 0px 10px;  
+.jumbotron h2 {
+  font-size: 60px;
+  font-weight: 700;
   margin: 0;
+  color: #000000;
+}
+
+section .row img {
+  margin: 0 0 30px;
+  width: 100%;
+}
+
+.col-md-4 {
+  margin: 0 100 0px;
+}
+
+
+.btn.btn-primary {
+  border-radius: 2px;
+  border: 0px;
+  color: #fbd1d5;
+  text-shadow: none;
+  background-color: #ffffff;
+}
+
+.btn.btn-primary:hover {
+  color: #ffffff;
+  background-color: #fbd1d5;
+}
+
+.btn-secondary {
+  background-color: #E8DFE0;
+  color: #ffffff;
+  margin: 0 0 30px;
+}
+
+footer {
+  font-size: 12px;
+  padding: 20px 0;
+}
+
+footer .col-sm-8 {
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer ul {
+  list-style: none;
+}
+
+footer li img {
+  width: 32px;
+  height: 32px;
 }
