--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
@@ -7,6 +8,7 @@ body {
 
 header {
   padding: 0px 0;
+  align: center;
 }
 
 header .row,
@@ -14,11 +16,6 @@ header .row,
 footer .row {
   display: flex;
   align-items: center;
-}
-
-header h1 {
-  font-weight: 700;
-  margin: 0;
 }
 
 header nav {
@@ -29,6 +26,7 @@ header nav {
 header p {
   padding: 0px 20px;  
   margin: 0;
+  align: center;
 }
 
 footer {
