--- a/main.css
+++ b/main.css
@@ -1,49 +1,27 @@
 
-body {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-  padding-right: 175px;
-  align-items: center;
- }
-
-header {
-  padding: 0px 0;
-  text-align: center;
+.topnav {
+    background-color: #333;
+    overflow: hidden;
 }
 
-header .row,
-
-footer .row {
-  display: flex;
-  align-items: center;
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 }
 
-header nav {
-  display: flex;  
-  justify-content: flex-end;
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
 }
 
-header p {
-  padding: 0px 20px;  
-  margin: 0;
-  align: center;
-}
-
-footer {
-  font-size: 12px;
-  padding: 20px 0;
-}
-
-footer .col-sm-8 {
-  display: flex;
-  justify-content: flex-end;
-}
-
-footer ul {
-  list-style: none;
-}
-
-footer li img {
-  width: 32px;
-  height: 32px;
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
 }
