--- a/main.css
+++ b/main.css
@@ -19,8 +19,8 @@
 
 /* Change background on mouse-over */
 .navbar a:hover {
-    background: #ddd;
-    color: black;
+    background: #000000;
+    color: #000000;
 }
 
 /* Main content */
