--- a/main.css
+++ b/main.css
@@ -47,6 +47,7 @@ header p {
 
 .jumbotron h2 {
   font-size: 60px;
+
   font-weight: 700;
   margin: 0;
   color: #000000;
@@ -98,4 +99,16 @@ footer ul {
 footer li img {
   width: 32px;
   height: 32px;
+}
+
+div.polaroid {
+  width: 80%;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+}
+
+div.container {
+  text-align: center;
+  padding: 10px 20px;
 }
