--- a/main.css
+++ b/main.css
@@ -48,7 +48,6 @@ header p {
 .jumbotron h2 {
   font-size: 60px;
 
-
   font-weight: 700;
   margin: 0;
   color: #000000;
@@ -105,6 +104,6 @@ footer li img {
 h2.ex1 {
     border: 1px solid black;
     outline-style: solid;
-    outline-color: red;
+    outline-color: black;
     outline-width: thin;
 }
