--- a/main.css
+++ b/main.css
@@ -104,6 +104,6 @@ footer li img {
 h2.ex1 {
     border: 1px solid black;
     outline-style: solid;
-    outline-color: black;
+    outline-color: gray;
     outline-width: thin;
 }
