--- a/main.css
+++ b/main.css
@@ -104,6 +104,7 @@ footer li img {
 h2.ex1 {
     border: 1px solid black;
     outline-style: solid;
-    outline-color: gray;
+    outline-color: grey;
     outline-width: thin;
+  background: grey;
 }
