--- a/main.css
+++ b/main.css
@@ -104,9 +104,9 @@ footer li img {
 }
 
 h2.ex1 {
-    border: 1px solid black;
+    border: 1px solid #F0F0F0;
     outline-style: solid;
-    outline-color: grey;
+    outline-color: #F0F0F0;
     outline-width: thin;
-  background: grey;
+  background: #F0F0F0;
 }
