--- a/main.css
+++ b/main.css
@@ -48,6 +48,7 @@ header p {
 }
 
 .jumbotron h2 {
+
   font-size: 60px;
 
   font-weight: 700;
@@ -109,4 +110,5 @@ h2.ex1 {
     outline-color: #F0F0F0;
     outline-width: thin;
   background: #F0F0F0;
+  padding:0px;
 }
